[tool.poetry]
name = "ai-art-generator"
version = "0.1.0"
description = ""
authors = ["BushraHussain <usamausman2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
diffusers = "^0.30.2"
transformers = "^4.44.2"
openai = "^1.44.1"
accelerate = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
